# pratice_rust

backend/: Cargo.toml  request.http
backend/src/: config.rs  database.rs  dto.rs  main.rs  model.rs  service.rs
backend/src/config/: config_dev.rs  config_local.rs  config_prod.rs
backend/src/controller/: admin_controller.rs  user_controller.rs
backend/src/dto/: request_dto.rs  response_dto.rs
backend/src/guard/: auth_guard.rs
backend/src/middleware/: auth_guard.rs
backend/src/model/: auth_model.rs  test_model.rs  todo_model.rs  user_model.rs
backend/src/service/: test_service.rs  todo_service.rs  user_service.rs
backend/src/util/: auth.rs
backend_web3/: Cargo.toml  request.http
backend_web3/src/: database.rs  main.rs  util.rs
backend_web3/src/controller/: user_controller.rs
backend_web3/src/dto/: request_dto.rs  response_dto.rs
backend_web3/src/middleware/: auth_guard.rs
backend_web3/src/util/: auth.rs  web3_ethereum.rs
binary/: Cargo.toml  README.md  docker-compose.build.yml  docker-compose.yml
binary/docker/: Dockerfile
binary/src/: main.rs
common/src/: main.rs
common_collection/src/: main.rs
guess_game/: Cargo.toml
guess_game/src/: main.rs
module_system/src/: house.rs  main.rs
open_ssl/: Cargo.toml  key.crt  key.pem  key.pub.pem
open_ssl/src/: main.rs  openssl_generator.rs
rabbitmq/: Cargo.toml  docker-compose.yml
rabbitmq/src/: main.rs  rabbitmq.rs
structor/: Cargo.toml
structor/src/: main.rs  user.rs
tauri-app/front/: Cargo.toml  index.html
tauri-app/src-tauri/: tauri.conf.json
web3/: Cargo.toml
web3/src/: main.rs
(+3 files in other folders)
