[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.1", features = ["secrets", "tls", "json"] }
jsonwebtoken = "8.0.1"
bcrypt = "0.12.1"

[dependencies.mongodb]
version = "2.1.0"
default-features = false
features = ["async-std-runtime"]